tests/tests/errors/2006-16.vb
'#compiler-options:/main:
'#compiler-message:Command line error BC2006 : option 'main' requires ':<class>'
'#exit-code:1